Удалены файлы стилей (styles.css) и API (index.js), обновлены пути к стилям в HTML. Внесены изменения в конфигурацию игры, включая обновление базовой скорости машины и скорости времени. Обновлены импорты в main.js для соответствия новым настройкам. Эти изменения упрощают структуру проекта и улучшают его поддержку.

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=3.0, minimum-scale=0.5">
   <title>Карта Шины</title>
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="./styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/7.2.4/pixi.min.js"></script>
 </head>
 
