Добавлен класс JournalManager для управления журналом поездок, включая функции начала и завершения поездок, а также отслеживание времени пребывания в местах. Обновлены файлы UIRenderer и main.js для интеграции нового функционала, добавлены элементы интерфейса для отображения журнала поездок. Внесены изменения в стили и HTML для поддержки нового меню. Эти изменения улучшают структуру кода и расширяют функциональность приложения.

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,8 @@
   <div class="modal-overlay" id="menu-modal">
     <div class="modal-content">
       <div class="modal-header">
-        <h2 class="modal-title">Меню игры</h2>
+        <button class="modal-back-btn" id="modal-back-btn">&lt;</button>
+        <h2 class="modal-title">Журнал</h2>
         <button class="modal-close" id="modal-close">&times;</button>
       </div>
       <div class="menu-items">
@@ -61,10 +62,12 @@
         </div>
         <div class="menu-item" id="menu-car-lights">🚗 Фары машины</div>
         <div class="menu-item" id="menu-route">🗺️ Маршрут</div>
+        <div class="menu-item" id="menu-journal">📝 Журнал поездок</div>
         <div class="menu-item" id="menu-settings">⚙️ Настройки</div>
         <div class="menu-item" id="menu-help">❓ Помощь</div>
         <div class="menu-item" id="menu-about">ℹ️ О игре</div>
       </div>
+
     </div>
   </div>
 
