Добавлен план работ по редизайну меню, включающий завершенные задачи по изменению отображения скорости, добавлению переключателя фар, замене "Маршрут" на "Расписание", удалению пункта "Настройки" и переносу "Помощь" и "Об игре" в модальные окна. Обновлены файлы UIRenderer, Car и main.js для реализации новых функций и улучшения пользовательского интерфейса. Завершено 6 из 20 задач по редизайну.

--- a/public/index.html
+++ b/public/index.html
@@ -57,13 +57,12 @@
       </div>
       <div class="menu-items">
         <div class="menu-item" id="menu-pause">⏸️ Пауза: <span id="pause-mode-text">Выключена</span></div>
-        <div class="menu-item" id="menu-speed">⚡ Управление скоростью</div>
+        <div class="menu-item" id="menu-speed">⚡ Скорость: <span id="speed-display">x1</span></div>
         <div class="menu-item" id="menu-daynight">🌅 Режим дня/ночи: <span id="daynight-mode-text">Автоматический</span>
         </div>
-        <div class="menu-item" id="menu-car-lights">🚗 Фары машины</div>
-        <div class="menu-item" id="menu-route">🗺️ Маршрут</div>
+        <div class="menu-item" id="menu-car-lights">🚗 Фары машины: <span id="car-lights-status">ВЫКЛ</span></div>
+        <div class="menu-item" id="menu-schedule">📅 Расписание</div>
         <div class="menu-item" id="menu-journal">📝 Журнал поездок</div>
-        <div class="menu-item" id="menu-settings">⚙️ Настройки</div>
         <div class="menu-item" id="menu-help">❓ Помощь</div>
         <div class="menu-item" id="menu-about">ℹ️ О игре</div>
       </div>
