Обновлено отображение состояния переключателей в меню: добавлены методы для обновления состояния паузы и режима дня/ночи, интегрированы вызовы обновления в основной метод. Исправлено отображение текста режима дня/ночи в HTML. Завершено 9 из 20 задач по редизайну меню.

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
       <div class="menu-items">
         <div class="menu-item" id="menu-pause">⏸️ Пауза: <span id="pause-mode-text">Выключена</span></div>
         <div class="menu-item" id="menu-speed">⚡ Скорость: <span id="speed-display">x1</span></div>
-        <div class="menu-item" id="menu-daynight">🌅 Режим дня/ночи: <span id="daynight-mode-text">Автоматический</span>
+        <div class="menu-item" id="menu-daynight">🌅 Режим дня/ночи: <span id="daynight-mode-text">Авто</span>
         </div>
         <div class="menu-item" id="menu-car-lights">🚗 Фары машины: <span id="car-lights-status">ВЫКЛ</span></div>
         <div class="menu-item" id="menu-schedule">📅 Расписание</div>
