Добавлен оверлей расписания с возможностью его отображения и скрытия с помощью горячей клавиши 'K'. Обновлены стили для оверлея и добавлены соответствующие элементы в интерфейс. Также внесены уточнения в файл AGENTS.md о планах на исправление в документации по техническому долгу.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               <h4>Горячие клавиши:</h4>
               <ul>
                 <li><strong>J</strong> - открыть журнал поездок</li>
+                <li><strong>K</strong> - показать расписание поверх игрового поля</li>
                 <li><strong>Escape</strong> - закрыть меню</li>
               </ul>
             </div>
